fixing code readability issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,10 @@
 }
 
 
+@media (min-width: 400px) {
+    .xs\:flex {
+        display: flex;
+    }
+}
+
+
